Engine/Scene/build_log_3.txt
[  3%] Built target glad
[ 42%] Built target glfw
[ 56%] Built target imgui
[ 59%] Built target ImGuizmo
[ 89%] Built target UICheckEngine
[ 91%] Building CXX object Editor/CMakeFiles/UICheckEditor.dir/Core/EditorLayer.cpp.obj
D:\ProjectsTest\UI\ENTT_YT\GitTests\initial\UI_Engine\Editor\Core\EditorLayer.cpp: In member function 'void EditorLayer::DrawViewportPanel()':
D:\ProjectsTest\UI\ENTT_YT\GitTests\initial\UI_Engine\Editor\Core\EditorLayer.cpp:468:19: error: 'class Shader' has no member named 'SetFloat4'; did you mean 'SetFloat3'?
  468 |         m_Shader->SetFloat4("u_Color", glm::vec4(0.2f, 0.7f, 1.0f, 1.0f));
      |                   ^~~~~~~~~
      |                   SetFloat3
D:\ProjectsTest\UI\ENTT_YT\GitTests\initial\UI_Engine\Editor\Core\EditorLayer.cpp:501:28: error: 'class Shader' has no member named 'SetFloat4'; did you mean 'SetFloat3'?
  501 |                  m_Shader->SetFloat4("u_Color", glm::vec4(1.0f, 0.5f, 0.0f, 1.0f)); // Orange
      |                            ^~~~~~~~~
      |                            SetFloat3
mingw32-make[2]: *** [Editor\CMakeFiles\UICheckEditor.dir\build.make:124: Editor/CMakeFiles/UICheckEditor.dir/Core/EditorLayer.cpp.obj] Error 1
mingw32-make[1]: *** [CMakeFiles\Makefile2:413: Editor/CMakeFiles/UICheckEditor.dir/all] Error 2
mingw32-make: *** [Makefile:135: all] Error 2
